--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,13 @@
     <!-- Lightbox -->
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
     <title>BT Real Estate {% block title %}{% endblock %}</title>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-4273561490308077",
+        enable_page_level_ads: true
+      });
+    </script>
 </head>
 <body>
     <!-- Topbar -->
